# rdc-website

./: .babelcompiled  .env  .env.example  .envrc  .envrc.example  .gitignore  CODE_OF_CONDUCT.md  LICENSE  Playground.ipynb  README.md  app.py  config.py  curl-2.txt  default.nix  devenv.nix  flake.nix  jupyter-shell.nix  makebabel.ipy  old-pyproject.toml  pyproject.toml  pytest.ini  server-address.txt  server.nix  service.nix  setup.py  shell.nix  test-setup.sh  update_db.py  workspace.code-workspace
.direnv/: flake-profile-1-link
.github/workflows/: ci.yml  cleanup-deploy-branch.yml  codeql-analysis.yml  release.yml
.ipynb_checkpoints/: Playground-checkpoint.ipynb
app/: __init__.py  models.py  resources.py  schemas.py
app/spreadsheets/: imports.py  util.py
app/templates/: base.html
docs/: backend.md  eviction-training.md  frontend.md  index.md
docs/data-collection/: strategy.md
eviction_tracker/: __init__.py  app.py  commands.py  config.py  database.py  email.py  extensions.py  jobs.py  monitoring.py  tasks.py  time_util.py  util.py
eviction_tracker/admin/: models.py  serializers.py  views.py
eviction_tracker/detainer_warrants/: __init__.py  csv_imports.py  exports.py  imports.py  judgement_imports.py  judgement_scraping.py  judgment_imports.py  judgment_scraping.py  models.py  scrape.py  serializers.py  util.py  views.py
eviction_tracker/direct_action/: models.py  serializers.py  views.py
eviction_tracker/permissions/: api.py
eviction_tracker/static_pages/: all-paths.json  content.json  elm-25d593.js  elm-3167a1.js  elm-370692.js  elm-52848a.js  elm-678c91.js  elm-6b740e.js  elm-8f0b92.js  elm-8fbf4b.js  elm-9f8624.js  elm-cbb22b.js  elm-dde137.js  elm-df0592.js  elm-e5a4a6.js  elm.js  index-0e82d1.js  index.html  manifest.json  style-7946dc.css  style.css
eviction_tracker/templates/: export_notification.html  export_notification.txt  index.html
instance/: config.py
migrations/versions/: 007864c7fca9_.py  056242d18e05_.py  0759b66ff396_.py  0a2ab28f73cf_.py  0c7d2004b225_.py  0f3f06abe6c5_.py  107428217fd0_.py  124241fed961_.py  141b8f6f15e2_.py  1628eb05c573_.py  168409f5e2eb_.py  19bc2460d32b_.py  21f341a50bc8_.py  243c813807f4_.py  28df5be25152_.py  29fb789ae54f_.py  2cb6c179bae9_.py  2d80f8ef6f25_.py  2e00c280b37a_.py  3f0b77aced75_.py  49a360ed287b_.py  4ca3c372fc77_.py  4df3919e6542_.py  537789537d2a_.py  5575d76d1738_.py  5ea709a8632b_.py  611584f72ec8_.py  648aba7516f5_.py  6c1ce20ad624_.py  (+53 more)
nix/: app.nix  cypress_overlay.nix  deps.nix  git_version.nix  gunicorn_config.py.nix  nginx.conf.nix  nginx.nix  pkgs.nix  python.nix  serve_app.nix  serve_static.nix  sources.json  static_files.nix  version-patch.diff
pages/: .gitignore  cypress.json  elm.json  package-lock.json  package.json  port-data-source.js
rdc_website/: app.py  commands.py  config.py  database.py  email.py  exceptions.py  extensions.py  jobs.py  logging.py  mailer.py  request.py  routes.py  tasks.py  time_util.py  util.py  with_requests.py
scripts/: boot-notebook  build-dev  build-ui  content-hash  drop_all.py  run  run-dev
src/: defendant.py  detainer_warrant.py  prepare-numbers.py
tests/: __init__.py  config.json  create_test_db.py  db_utils.py  fixtures.py  helpers.py  mock.py  test_data_import.py  test_db.sql  test_detainer_warrant.py  test_docket_import.py  test_judgment_import.py  test_mock.py  test_mock_twilio.py  test_pleading_import.py
ui/: elm.json  index.html
(+360 files in other folders)
