[tool.poetry]
name = "rdc_website"
version = "0.1.0"
description = "A court data site for use by the people"
authors = ["Greg Ziegan <greg.ziegan@gmail.com>"]
readme = "README.md"
license = "BSD"
packages = [{ include = "rdc_website" }]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.9"
flask = "^3.0.3"
pdbpp = "^0.10.2"
# click = "^8.1.7"
gunicorn = "^22.0.0"
ipython = "^8.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
