[tool.poetry]
name = "rdc_website"
version = "0.1.0"
description = "A court data site for use by the people"
authors = ["Greg Ziegan <greg.ziegan@gmail.com>"]
readme = "README.md"
license = "BSD"
packages = [{ include = "rdc_website" }]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.9"
flask = "^3.0.3"
pdbpp = "^0.10.2"
# click = "^8.1.7"
gunicorn = "^22.0.0"
ipython = "^8.23.0"
click = "^8.1.7"
gspread = "^6.1.0"
sqlalchemy = "^2.0.29"
flask-sqlalchemy = "^3.1.1"
marshmallow = "^3.21.1"
marshmallow-sqlalchemy = "^1.0.0"
flask-resty = "^5.0.0"
flask-login = "^0.6.3"
babel = "^2.9.0"
bcrypt = "^4.1.2"
twilio = "^9.0.5"
phonenumbers = "^8.13.35"
pyquery = "^2.0.0"
nameparser = "^1.1.3"
apscheduler = "^3.10.4"
flask-apscheduler = "^1.13.1"
usaddress = "^0.5.10"
datadog = "^0.49.1"
python-json-logger = "^2.0.7"
gspread-formatting = "^1.1.2"
flask-cors = "^4.0.0"
pdf2image = "^1.17.0"
pdfminer-six = "^20231228"
selenium = "^4.20.0"
pytesseract = "^0.3.10"
flask-mail = "^0.9.1"
flask-testing = "^0.8.1"
flask-marshmallow = "^1.2.1"
flask-migrate = "^4.0.7"
requests = "^2.31.0"
black = "^24.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pdbpp = "^0.10.3"
python-language-server = "^0.36.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
